--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,14 +1,21 @@
 <resources>
     <string name="app_name">Gerenciador de Estoque</string>
-    <!-- TODO: Remove or change this placeholder text -->
+
     <string name="hello_blank_fragment">Hello blank fragment</string>
+
+    <!-- Login -->
     <string name="email">E-Mail:</string>
     <string name="password">Senha:</string>
     <string name="email_hint">E-Mail</string>
     <string name="password_hint">Senha</string>
+
+    <!-- Main menu -->
     <string name="menu_title">O que deseja fazer?</string>
     <string name="create">Cadastrar produto</string>
     <string name="list">Listar produtos</string>
     <string name="update">Alterar produtos</string>
     <string name="delete">Deletar produtos</string>
+
+    <!-- common -->
+    <string name="back">Voltar</string>
 </resources>
