add create product screen

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,6 +16,16 @@
     <string name="update">Alterar produtos</string>
     <string name="delete">Deletar produtos</string>
 
+    <!-- Create -->
+    <string name="code_label">Código do produto</string>
+    <string name="name_label">Nome do produto</string>
+    <string name="description_label">Descrição do produto</string>
+    <string name="quantity_label">Estoque</string>
+    <string name="save_form">Salvar</string>
+    <string name="invalid_form_feedback">Todos os campos são obrigatórios</string>
+    <string name="success_feedback">Produto adicionado com sucesso</string>
+
     <!-- common -->
     <string name="back">Voltar</string>
+    <string name="reset_form">Limpar</string>
 </resources>
