--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -22,6 +22,8 @@
     <string name="description_label">Descrição do produto</string>
     <string name="quantity_label">Estoque</string>
     <string name="save_form">Salvar</string>
+    <string name="delete_product">Deletar</string>
+    <string name="update_product">Alterar</string>
     <string name="invalid_form_feedback">Todos os campos são obrigatórios</string>
     <string name="success_feedback">Produto adicionado com sucesso</string>
 
@@ -31,5 +33,4 @@
     <!-- common -->
     <string name="back">Voltar</string>
     <string name="reset_form">Limpar</string>
-    <string name="delete_product">Deletar</string>
 </resources>
